--- a/ProjectMain/ContentPage/ContentPage.css
+++ b/ProjectMain/ContentPage/ContentPage.css
@@ -12,6 +12,7 @@
     height: 100vh;
     display: flex;
     justify-content: flex-start;
+    flex-wrap: wrap;
 }
 a{
     text-decoration: none;
@@ -19,7 +20,7 @@ a{
 }
 /* ------------------------- */
 
-/* --------- lefft side -------- */
+/* --------- Body Left side -------- */
 .container .left-side{
     width: 50%;
     height: 100%;
@@ -90,15 +91,16 @@ a{
     color: white;
 }
 
-/* ------ right side -------- */
+/* ------ Body right side -------- */
 .container .right-side{
     width: 50%;
     height: 100%;
     /* border: 1px solid black; */
     padding: 40px;
     font-size: 22px;
+    overflow: scroll;
 }
-/* --------------- */
+
 .information {
     display: flex;
     flex-direction: row;
@@ -111,7 +113,7 @@ a{
     padding-left: 150px;
 }
 .right-side .contribute-content{
-    width: 100%;
+    /* width: 100%; */
     height: 300px;
     /* border: 1px solid black; */
     padding: 30px 0;
@@ -143,4 +145,49 @@ a{
    width: 500px;
     
 }
+.right-side .content-detail{
+    text-align: justify;
+}
 
+/* ------ footer -------- */
+.footer{
+    
+    width: 100%;
+    background-color: white;
+    display: flex;
+    justify-content: space-evenly;
+    padding-top: 20px;
+    flex-wrap: wrap;
+
+}
+.footer .footer__col{
+    width: 17%;
+    color: black;
+    padding: 10px;
+
+}
+.footer .footer__col::before{
+    content: " ";
+    display: block;
+    width: 100%;
+    height: 2px;
+    margin: 0 auto;
+    background-color: orange;
+    
+}
+.footer .for-beautiful{
+    border-top: 1px solid black;
+    padding: 10px;
+    width: 90%;
+    text-align: center;
+}
+.footer .for-beautiful .for-fun{
+    width: 80%;
+    display: inline;
+    padding: 0 10px 0 10px;
+    text-align: center;
+    /* line-height: 13px; */
+}
+.footer .for-beautiful .tag{
+    border-right: 2px solid black;
+}
