--- a/ProjectMain/tempPage/tempPage.css
+++ b/ProjectMain/tempPage/tempPage.css
@@ -37,10 +37,12 @@
     border: none;
     outline: none;
     border-radius: 5px;
+    padding-left: 10px;
 }
 .container .nav i{
     font-size: 20px;
     line-height: 50px;
+    color: white;
     
 }
 
