--- a/ProjectMain/ContentPage/ContentPage.css
+++ b/ProjectMain/ContentPage/ContentPage.css
@@ -25,8 +25,9 @@ a{
     width: 50%;
     height: 100%;
     /* border: 1px solid black; */
-    background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('https://uppercasetheme.com/kendrick-bronson/wp-content/uploads/sites/29/demo-image-00012-960x960.jpg');
+    /* background-image: linear-gradient(rgba(0, 0, 0, 0.35), rgba(0, 0, 0, 0.35)), url('https://uppercasetheme.com/kendrick-bronson/wp-content/uploads/sites/29/demo-image-00012-960x960.jpg'); */
     background-size: cover;
+  
 }
 
 .container .left-side{
@@ -49,6 +50,8 @@ a{
     font-weight: 700;
     font-size: 25px;
     letter-spacing: 1px;
+   
+    
 }
 .container .left-side .nav .right-nav{
     display: flex;
