--- a/Dashboard.css
+++ b/Dashboard.css
@@ -1,98 +1,108 @@
-*{
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
-    font-family: 'Noto Sans HK', sans-serif;
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  font-family: "Noto Sans HK", sans-serif;
 }
-#mainweb{
-    width: 100%;
-    height: 100vh;
-    /* border:  1px solid black; */
-    margin:  0 auto;
-    display:  flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-image: linear-gradient(-20deg,rgba(4, 70, 190, 0.589), rgba(218, 7, 7, 0.39)),url('./ProjectMain/Images/backDashboard.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    
+#mainweb {
+  width: 100%;
+  height: 100vh;
+  /* border:  1px solid black; */
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-image: linear-gradient(
+      -20deg,
+      rgba(4, 70, 190, 0.589),
+      rgba(218, 7, 7, 0.39)
+    ),
+    url("./ProjectMain/Images/backDashboard.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
-.main-option-link{
-    text-decoration: none;
-    color: black;
+.main-option-link {
+  display: block;
+  text-decoration: none;
+  color: black;
 }
-.main-option-link:active{
-    transform: translateY(5px);
+.main-option-link:active {
+  transform: translateY(5px);
 }
-.main-option{
-    display: block;
-    height: 70px;
-    width: 250px;
-    /* border:  1px solid black; */
-    line-height: 70px;
-    text-align: center;
-    border-radius: 40px;
-    margin: 20px;
-    background-color: white;
-    box-shadow: 0px 0px 20px 1px rgba(99, 99, 99, 0.63);
-    transition: all 0.3s;
+.main-option {
+  display: block;
+  height: 70px;
+  width: 250px;
+  /* border:  1px solid black; */
+  line-height: 70px;
+  text-align: center;
+  border-radius: 40px;
+  margin: 20px;
+  background-color: white;
+  box-shadow: 0px 0px 20px 1px rgba(99, 99, 99, 0.63);
+  transition: all 0.3s;
 }
-.main-option:hover{
-    height: 90px;
-    width: 270px;
-    line-height: 90px;
-    transition: all 0.8s;
-    font-size: 20px;
-    background-image: linear-gradient(-20deg,rgba(4, 70, 190, 0.589), rgba(7, 218, 53, 0.39));
-    color: white;
-    font-weight: 700;
+.main-option:hover {
+  height: 90px;
+  width: 270px;
+  line-height: 90px;
+  transition: all 0.8s;
+  font-size: 20px;
+  background-image: linear-gradient(
+    -20deg,
+    rgba(4, 70, 190, 0.589),
+    rgba(7, 218, 53, 0.39)
+  );
+  color: white;
+  font-weight: 700;
 }
-#mainweb .main-option-link .animate1{
+
+.main-option-link:hover {
+  color: white;
+}
+
+#mainweb .main-option-link .animate1 {
+  opacity: 1;
+  animation: moving1 0.5s ease-out;
+}
+#mainweb .main-option-link .animate2 {
+  animation: moving2 0.5s ease-out;
+}
+#mainweb .main-option-link .animate3 {
+  opacity: 1;
+  animation: moving1 0.5s ease-out;
+}
+#mainweb .main-option-link .animate4 {
+  opacity: 1;
+  animation: moving2 0.5s ease-out;
+}
+@keyframes moving1 {
+  0% {
+    transform: translateX(-100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
     opacity: 1;
-    animation:  moving1 .5s ease-out;
-    
+  }
 }
-#mainweb .main-option-link .animate2{
-    animation:  moving2 .5s ease-out;
-    
-}
-#mainweb .main-option-link .animate3{
+@keyframes moving2 {
+  0% {
+    transform: translateX(100px);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0px);
     opacity: 1;
-    animation:  moving1 .5s ease-out;
-    
+  }
 }
-#mainweb .main-option-link .animate4{
+@keyframes hideblock {
+  0% {
+    opacity: 0;
+  }
+  100% {
     opacity: 1;
-    animation:  moving2 .5s ease-out;
-    
-}
-@keyframes moving1{
-    0%{
-        transform: translateX(-100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateY(0px);
-        opacity: 1;
-    }
-}
-@keyframes moving2{
-    0%{
-        transform: translateX(100px);
-        opacity: 0;
-    }
-    100%{
-        transform: translateY(0px);
-        opacity: 1;
-    }
-}
-@keyframes hideblock{
-    0%{
-        opacity: 0;
-    }
-    100%{
-        opacity: 1;
-    }
+  }
 }
