--- a/ProjectMain/tempPage/tempPage.css
+++ b/ProjectMain/tempPage/tempPage.css
@@ -92,17 +92,20 @@ a{
   /* border:  1px solid black; */
   height: 100%;
   width: 40%;
+  object-fit: cover;
   border-radius: 10px 0  0 10px;
 }
 .container .component .component-child p{
   /* border:  1px solid black; */
   height: 100%;
   width: 100%;
+  font-size: 20px;
   line-height: 100%;
   /* margin: 0 auto; */
   /* text-align: center; */
   text-align: justify;
-  padding: 20px 0 0 20px;
+  padding: 20px;
+  line-height: 30px;
   
 }
  
